# template-repo

./: .env.example  .gitattributes  .gitignore  01_appdev-key-concepts.md  04_github-quickref.md  AGENTS.md  PROJECT_README.md  README.md
.github/workflows/: ci-nodejs.yaml  ci-nodejs.yml  ci-python.yaml  ci-python.yml  release.yml
Github/: 01_github-quickref.md  02_team-worflow.md  ci.yaml
LangGraph/: langgraph-concepts.md
backend/: AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/src/app/: AGENTS.md  README.md  main.py
backend/src/app/agent/: AGENTS.md
backend/src/app/agent/observability/: emitter.py  events.py
backend/src/app/agent/prompts/: AGENTS.md
backend/src/app/common/observability/: AGENTS.md  logging.py
backend/src/app/config/: settings.py
backend/src/app/contracts/: AGENTS.md
backend/src/app/contracts/agent/: agent_event_v1.json
backend/src/app/features/: AGENTS.md  README.md
backend/src/app/features/diagnostics/: AGENTS.md  routes.py
backend/src/app/features/health/: AGENTS.md  models.py  routes.py  service.py
backend/tests/unit/features/health/: test_health.py
docs/: AGENTS.md  architecture.md  types.md
docs-hub/: 02_vibe-prompts.md
docs-hub/EnvMgmt/: 03_uv-quickref.md
docs-hub/Github/: 01_github-quickref.md
docs-hub/LangGraph/: agentic-app-checklist.md
docs-hub/Python/: python-key-concepts.md
evals/: AGENTS.md  runner.py
ops/: AGENTS.md  docker-compose.yml
web/: .eslintrc.json  AGENTS.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+17 files in other folders)
