[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for agentic apps (template)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Your Team"}]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  # Enable when agent features are added
  # "langgraph>=0.2",
  # "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

